--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,37 @@ body {
         transform: translate3d(0, 0, 0);
     }
 }
+
+.js-accordion dt {
+    cursor: pointer;
+}
+
+.js-accordion dt::after {
+    content: '\21B4';
+    margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+    content: '⬏';
+}
+
+.js .js-accordion dd {
+    display: none;
+}
+
+.js-accordion dd.ativo {
+    display: block;
+    animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+
+    to {
+        opacity: 1;
+        max-height: 200px;
+    }
+}
